<resources>
    <string name="app_name">Android4Bikes</string>
    <!--Navigation Strings-->
    <string name="title_profile">Profile</string>
    <string name="title_community">Community</string>
    <string name="title_hazard">Hazard</string>
    <string name="title_assistance">Assistance</string>
    <string name="title_telnumbers">Emergency Numbers</string>
    <string name="title_switchMode">Mode Switch</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_mytracks">My Tracks</string>
    <string name="title_settings">Settings</string>
    <!--Hazard Strings-->
    <string name="HazardAlert_HazardType_DamagedRoad">Damaged road</string>
    <string name="HazardAlert_HazardType_IcyRoad">Icy road</string>
    <string name="HazardAlert_HazardType_SlipperyRoad">Slippery road</string>
    <string name="HazardAlert_HazardType_Roadkill">Roadkill</string>
    <string name="HazardAlert_HazardType_Rockfall">Rockfall</string>
    <!---Login Strings-->
    <string name="activity_login_image">Login Image</string>
    <string name="Activity_Login_Toast_Fail">Sorry auth failed.</string>
    <!---Map Strings TODO: Remove-->
    <string name="map_key" translatable="false">AIzaSyCsUEsnSdcigggEDqvZT_lDf0GS8RqzuKc</string>
    <!-- Tracks Strings -->
    <string name="distance">%1$.2f km</string> <!-- '%1$.2f' means Placeholder for float with 2 decimals -->
    <string name="speed">%1$d km/h</string>
    <string name="track_description">Description</string>
    <string name="range">%1$d km</string>
    <string name="total_track_List">Total Tracks: %1$d </string>
    <string name="unfiltered">All</string>
    <string name="filter_rating">%1$s \u2605</string>
    <string name="track_length">Track Length</string>
    <string name="property_Range">Range</string>
    <string name="property_RoadQuality">Road Quality</string>
    <string name="property_Difficulty">Difficulty</string>
    <string name="property_Funfactor">Fun Level</string>
    <!-- Sorting Strings -->
    <string name="sortBy">Sort by</string>
    <string name="sortingOrder">Order by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>

    <!-- Feedback Dialog -->
    <string name="feedback_desc">Description</string>
    <string name="submit">Submit</string>
    <string name="submit_hazard">Select Hazard</string>
    <string name="discard">Discard</string>
    <string name="track_name">Track name</string>

    <!-- Rack Dialog -->
    <string name="rack_name">Rack name</string>
    <string name="rack_capacity">Capacity</string>
    <string name="ebike">E-bike charging station</string>
    <string name="covered">Covered</string>
    

    <!-- Roadside Assistance Strings -->
    <string-array name="roadside_assistance_list">
        <item>Ambulance Service</item>
        <item>Fire Department</item>
        <item>Police</item>
        <item>Roadside Assistance</item>
        <item>Youth Helpline</item>
        <!--<item>Manual Input</item>-->
    </string-array>

    <!--settings, logout, and profile deletion -->
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="confirmation">Are you sure?</string>
    <string name="confirmation_message">Do you really want to delete your profile?\nThis can not be undone.</string>
    <string name="deletion_successful">Your profile has been deleted!</string>
    <!--default Text-->
    <string name="search">Search</string>
    <string name="filter_range">Searching Range</string>
    <string name="not_available">N/A</string>
    <!--Button Strings-->
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <!---Setting Strings -->
    <string name="settings_Bluetooth">Bluetooth</string>
    <string name="settings_Bluetooth_summary">Bluetooth Hardwarebutton erkennen</string>
    <string name="settings_Bluetooth_addButton">Bluetooth Hardware mit App verbinden</string>
    <string name="settings_Bluetooth_Button">Bluetooth Hardware aktivieren</string>
    <string name="settings_Bluetooth_Click">Klick Einstellungen</string>
    <string name="settings_Offline">Offline Einstellungen</string>
    <string name="settings_Offline_Map">Offline Karten verwenden</string>
    <string name="settings_Offline_Radius">Abrufradius in Meter</string>
    <string name="settings_Weather">Wetter Einstellungen</string>
    <string name="settings_Weather_Warning">Unwetter Warungen anzeigen</string>
    <string name="settings_Weather_Frequenz">Wetter Aktuallisierung</string>
    <string name="settings_Drive">Fahrteinstellungen</string>
    <string name="settings_Drive_DistanceUnit">Entfernungseinheit</string>
    <string name="settings_Drive_Averrage">Durchschnittsgeschwindigkeit anzeigen</string>
    <string name="settings_Privacy">Datenschutzeinstellungen</string>
    <string name="settings_Privacy_Position">Positionsdaten erfassen?</string>
    <string name="settings_Privacy_Voice">Sprachsteureung aktivieren</string>

    <string-array name="weather_frequenz_list">
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
    </string-array>

    <string-array name="distance_unit">
        <item>Kilometer</item>
        <item>Meilen</item>
    </string-array>

    <string-array name="marker">
        <item>Rack</item>
        <item>Hazard</item>
    </string-array>

    <string-array name="hazards">
        <item>General</item>
        <item>Rockfall</item>
        <item>Roadkill</item>
        <item>Slippery road</item>
        <item>Icy road</item>
        <item>Damaged road</item>
    </string-array>

    <string-array name="rack_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Gigantic</item>
    </string-array>
    <string name="access_token" translatable="false">pk.eyJ1IjoiYW5kNGJpa2VzIiwiYSI6ImNrOTN5NThqNjAwZTUzZm15c21rdGc3a24ifQ.do688uZrW5rG-Hl82GjTng</string>

    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="new_location">Location\nlat:%s long:%s</string>
    <string name="was_in_tunnel" />
    <string name="was_navigation_stopped" />
    <string name="gps_title">Enable GPS</string>+
    <string name="gps_message">Do you want to enable GPS?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginfailure">Login went wrong</string>
    <string name="logoutfailed">Logout process failed!</string>
    <string name="loginfailed">The login process failed. Please retry.</string>
    <string name="register_hazard">Registered Hazard!</string>
    <string name="settings_Bluetooth_reset">Bluetooth Button zurücksetzen</string>
    <string name="achievement">Achievement</string>
    <string name="achievement_text">I\'m an Achievement</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="your_achievements">Your achievements</string>
    <string name="hint_name">Name</string>
    <string name="change_profile_image">Change Profile image</string>
    <string name="hint_email">Email</string>


</resources>
