<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_Offline">
        <SwitchPreferenceCompat
            app:key="offline_map"
            app:title="@string/settings_Offline_Map"/>

        <SeekBarPreference
            app:key="fetch_radius"
            app:title="@string/settings_Offline_Radius"
            app:min="5"
            app:defaultValue="10"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            android:max="50"
            />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_Bluetooth">
        <Preference
            app:title="@string/settings_Bluetooth_summary"
            app:key="bluetooth_active">
        </Preference>
        <Preference
            app:title="@string/settings_Bluetooth_reset"
            app:key="bluetooth_reset">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_Weather">

        <SwitchPreferenceCompat
            app:key="weather_waring"
            app:title="@string/settings_Weather_Warning" />

        <ListPreference
            app:key="weather_frequenz"
            app:title="@string/settings_Weather_Frequenz"
            app:entryValues="@array/weather_frequenz_list"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/weather_frequenz_list"
            app:defaultValue="15 min"/>

    </PreferenceCategory>
        app:title="@string/settings_Drive">

        <ListPreference
            app:key="drive_distanceUnit"
            app:title="@string/settings_Drive_DistanceUnit"
            app:entryValues="@array/distance_unit"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/distance_unit"
            app:defaultValue="Kilometer"/>

        <SwitchPreferenceCompat
            app:key="drive_average"
            app:title="@string/settings_Drive_Averrage"
            app:defaultValue="true"/>

    <PreferenceCategory
        app:title="@string/settings_Privacy">

        <SwitchPreferenceCompat
            app:key="position"
            app:title="@string/settings_Privacy_Position"/>

        <SwitchPreferenceCompat
            app:key="voice"
            app:title="@string/settings_Privacy_Voice"/>
    </PreferenceCategory>

</PreferenceScreen>