<?xml version="1.0" encoding="utf-8"?>
<actions>

    <!-- This file describes the supported actions by this app -->
    <action intentName="actions.intent.RECORD_EXERCISE">

        <!-- Each action requires at least one fulfillment that defines how the app will handle this action -->
        <!-- Define the urlTemplate in the format you define your deeplinks in AndroidManifest.xml -->
        <parameter name="exercise.@type">
            <entity-set-reference entitySetId="ExerciseEntitySet" />
        </parameter>
        <fulfillment urlTemplate="my-scheme://and4bikes/report/{?hazardType}">

            <!-- Define how the actions parameters (intentParameter) is mapped in the urlTemplate above -->
            <parameter-mapping
                intentParameter="exercise.name"
                urlParameter="hazardType" />
        </fulfillment>
    </action>

    <entity-set entitySetId="ExericiseEntitySet">
        <entity
            name="@string/HazardAlert_HazardType_DamagedRoad"
            identifier="Damaged road" />
        <entity
            name="@string/HazardAlert_HazardType_IcyRoad"
            identifier="Icy road" />
        <entity
            name="@string/HazardAlert_HazardType_SlipperyRoad"
            identifier="Slippery road" />
        <entity
            name="@string/HazardAlert_HazardType_Roadkill"
            identifier="Roadkill" />
        <entity
            name="@string/HazardAlert_HazardType_Rockfall"
            identifier="Rockfall" />
        <entity
            name="Bike rack"
            identifier="Bike rack" />
    </entity-set>

    <action intentName="actions.intent.OPEN_APP_FEATURE">

        <!-- Each action requires at least one fulfillment that defines how the app will handle this action -->
        <!-- Define the urlTemplate in the format you define your deeplinks in AndroidManifest.xml -->
        <parameter name="feature">
            <entity-set-reference entitySetId="FeatureEntitySet" />
        </parameter>
        <fulfillment urlTemplate="my-scheme://and4bikes/open/{?appFeature}">

            <!-- Define how the actions parameters (intentParameter) is mapped in the urlTemplate above -->
            <parameter-mapping
                intentParameter="feature"
                urlParameter="appFeature" />
        </fulfillment>
    </action>
    <entity-set entitySetId="FeatureEntitySet">
        <entity
            name="@string/title_telnumbers"
            identifier="Emergency Numbers" />
        <entity
            name="@string/title_settings"
            identifier="Settings" />
        <entity
            name="Profile"
            identifier="Profile" />
        <entity
            name="Submit"
            identifier="Submit" />
        <entity
            name="Tracklist"
            identifier="Tracklist" />
        <entity
            name="Community"
            identifier="Community" />
        <entity
            name="My track list"
            identifier="My track list" />
    </entity-set>
</actions>