<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_main">
        <item
            android:id="@+id/menu_submit"
            android:icon="@drawable/ic_material_marker_plus"
            android:title="Submit a..."
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_emergencyCall"
            android:icon="@drawable/ic_material_phone"
            android:title="@string/title_telnumbers"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_material_person"
            android:title="@string/title_profile"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_ownTracks"
            android:icon="@drawable/ic_material_map_legend"
            android:title="My Tracks"
            app:showAsAction="always"/>
    </group>
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_material_cog"
            android:title="@string/settings"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_material_logout"
            android:title="@string/logout"
            app:showAsAction="always" />

    </group>
</menu>